--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "material-table": "^1.53.0",
+    "material-ui-popup-state": "^1.4.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
