--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "material-ui-popup-state": "^1.4.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-draggable": "^4.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
