--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "http://syntrydy.github.io/FirstReactApp",
+  "homepage": "http://syntrydy.github.io/oxTrust2",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.1",
