--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "@nivo/bar": "^0.59.2",
     "axios": "^0.19.0",
     "material-table": "^1.53.0",
     "material-ui-popup-state": "^1.4.1",
