--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@material-ui/icons": "^4.5.1",
     "@nivo/bar": "^0.59.2",
     "axios": "^0.19.0",
+    "i18next": "^19.0.2",
     "material-table": "^1.53.0",
     "material-ui-popup-state": "^1.4.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-draggable": "^4.1.0",
     "react-hook-form": "^3.27.0",
+    "react-i18next": "^11.2.7",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
